src/test/deca/syntax/invalid/nomain.deca
//Description
//    Vérifier un prg vide
//
//Résultats :
//    Erreur Syntaxique ligne 8
//

int a = 4;
